k8s/flux/clusters/tal-clu-1/infra/observe/openobserve/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http
  namespace: openobserve
spec:
  entryPoints: ["web"]
  routes:
  - match: Host(`openobserve.homelab.emerconnelly.com`)
    kind: Rule
    middlewares:
    - name: https-redirect
      namespace: traefik
    services:
    - name: noop@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: openobserve
spec:
  entryPoints: ["websecure"]
  routes:
  - match: Host(`openobserve.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: openobserve-router
      port: 5080
      sticky:
        cookie:
          name: traefik
          secure: true
          httpOnly: true
          sameSite: lax
  tls:
    secretName: ingress-tls
